--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <version>1.18.22</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
