--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>io.github.asewhy</groupId>
     <artifactId>doc-api-generator</artifactId>
-    <version>1.1</version>
+    <version>1.3</version>
 
     <licenses>
         <license>
@@ -19,7 +19,7 @@
 
     <name> doc-api-generator </name>
     <url> https://github.com/AseWhy/doc-api-generator </url>
-    <description> Simple module </description>
+    <description> Simple module for generating do api </description>
 
     <developers>
         <developer>
@@ -45,7 +45,7 @@
         <io.github.asewhy.reflection-utils.version>1.0</io.github.asewhy.reflection-utils.version>
         <org.springframework.boot.spring-boot-starter-validation.version>2.6.3</org.springframework.boot.spring-boot-starter-validation.version>
         <org.springframework.boot.spring-boot-starter-web.verstion>2.6.3</org.springframework.boot.spring-boot-starter-web.verstion>
-        <io.github.asewhy.conversions.verssion>1.2</io.github.asewhy.conversions.verssion>
+        <io.github.asewhy.conversions.verssion>1.3</io.github.asewhy.conversions.verssion>
     </properties>
 
     <dependencies>
@@ -105,6 +105,7 @@
             <version>1.18.22</version>
             <optional>true</optional>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
